# ECE-Senior-Design-3-code

./: .gitignore  COMS.py  Controller.py  Display.py  GPS_I2C.py  MainPage_controller.py  Model.py  README.md  config.ini  database.py  main.py  main_controller.py  pyproject.toml  requirements.txt  settings_controller.py
3D Enclosure Files/: Base.SLDPRT
3D Enclosure Files/Base/: GPS_Enclosure_Body.SLDPRT  GPS_Enclosure_Body.STL
3D Enclosure Files/base station lid/: GPS_Base_Station_Lid.SLDPRT  GPS_Base_Station_Lid.STL
3D Enclosure Files/mobile station lid/: GPS_Mobile_Station_Lid.SLDPRT  GPS_Mobile_Station_Lid.STL
Controllers/: main.py  mainframe.py  mainpage.py  map.py  numericentry.py  settings.py
Desktop Files/: DGPS.desktop  unclutter.desktop
IO/: COMS.py  GPS_I2C.py
Model/: database.py  main.py
Views/: display.py  main.py  mainframe.py  map.py  numericentry.py  settings.py  window.py
