[tool.poetry]
name = "ece-senior-design-3-code"
version = "0.7.0"
description = "Differential GPS"
authors = ["Jordan Frethem, Ethan Severson, Brandon Sitarz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.2"
tkintermapview = "^1.29"
pyserial = "^3.5"
smbus2 = "^0.4.3"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
